[project]
name = "Natalytics"
version = "0.1.0"
description = "Simple Astrology app with AI"
dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
]

[tool.mypy]
# For more options, see https://mypy.readthedocs.io/en/stable/config_file.html
files = ["src", "tests"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# For more options, see https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
# For more options, see https://docs.astral.sh/ruff/configuration/
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"] # pycodestyle (E, W), Pyflakes (F), isort (I)
ignore = ["E203"] # Rules that conflict with the 'black' formatter
